fix:alignment and add icons in sideBar

--- a/client/src/assets/styles/global.css
+++ b/client/src/assets/styles/global.css
@@ -84,6 +84,8 @@ header{
     z-index: 3;
 }
 
+
+
 .userInfo {
     z-index: 2;
     width: auto; 
@@ -94,7 +96,8 @@ header{
     padding: 0 2rem;
     font-family: var(--font-secondary);
     background: var(--mocha-beige);
-    color: var(--parchment);
+    color: var(--espresso-black);
+    font-weight: bold;
 }
 
 .Info {
@@ -119,8 +122,21 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1rem;
+    justify-content: start;
     padding: 0.5rem 0;
+}
+
+.navlink {
+    width: auto;
+    height: auto;
+    text-decoration: none;
+    color: var(--parchment);
+}
+
+.lblNav{
+    width: auto;
+    height: auto;
+    margin-left: 0.5rem;
 }
 
 .midSection {
@@ -131,12 +147,22 @@ header{
 }
 
 .bottomSection {
+    z-index:0;
     position: absolute;
-    bottom: 0;
+    bottom:0rem;
+    padding: 0 2rem;
     width: auto;
     height: auto;
-    padding: 0 2rem;
-    background: var(--arabica-brown);
+}
+
+.navBottomBtn{
+    position: relative;
+    bottom: 0rem;
+    transition: all 1s;
+    color: var(--parchment);
+    font-family: var(--font-secondary);
+    width: auto;
+    height: auto;
 }
 
 ul{
@@ -152,16 +178,20 @@ ul li a {
     color: var(--parchment);
     padding: 0.5rem 0;
     display: block;
+    width: 10rem;
     padding: 10px 15px;
 }
 
-ul li img a:hover {
+ul li a:hover {
+    width: 15rem;
     background: var(--forest-green);
     color: var(--parchment);
     border-radius: 10px;
+    
 }
 
-ul li img a.active {
+ul li a.active {
+    width: auto;
     background: var(--forest-green);
     color: var(--parchment);
     border-radius: 10px;
@@ -178,6 +208,6 @@ ul li img a.active {
 }
 
 .icon, .progress-bar {
-  color: var(--forest-green);
+  color: var(--parchment);
 }
 
